--- a/index.html
+++ b/index.html
@@ -5,11 +5,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Spense Website</title>
 </head>
 
 <body>
+  <!-- header starts here -->
+  <header>
+    <div>
+      <div class="heading">
+        <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+        <span>To celebrate Spense's lunch, we will be waving all fees for the entire month of April. <u>You will be receiving 100% of earning</u>.</span>
+        <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+      </div>
+    </div>
+  </header>
+  <!-- header ends here -->
 
+  <!-- navbar starts here -->
+<div class="navbar">
+  <div class="col-3">
+    <div class="first-nav">
+      <a href="#">Spense.</a>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="mid-nav">
+      <a href="#">Business</a>
+      <a href="#">Prising</a>
+      <a href="#">Features</a>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="login">
+      <button id="log">Login</button>
+      <button id="get">Get Started</button>
+    </div>
+  </div>
+</div>
+  <!-- navbar ends here -->
 </body>
 
 </html>
