--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
   </div>
 </div>
   <!-- navbar ends here -->
+  <main id="main-section">
+    <section class="section-one">
+      <div id="left-div" class="col-8">
+        <h2 class="heading-2">Share your unfiltered thoughts. Get paid.</h2>
+        <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
+          and get paid for doing <em> just </em> that.
+        </p>
+        <div class="list-items">
+          <ul>
+            <li>Receive 99% off the earning.</li>
+            <li>Get paid vaia Devit Card, ACH or PayPal.</li>
+            <li>Withdraw your earning anytime.</li>
+          </ul>
+        </div>
+        <div class="button">
+          <input id="input-1" type="text" placeholder="jhon@example.com">
+          <input id="input-2" type="button" value="Get Started">
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="banner">
+          <img id="banner" src="images/picture1.png" alt="background">
+        </div>
+      </div>
+    </section>
+    <section id="section-two">
+        <img src="images/Facebook Logo.png" alt="fb-logo">
+        <img src="images/Google Logo.png" alt="">
+    </section>
+  </main>
 </body>
 
 </html>
