main section crreated

--- a/index.html
+++ b/index.html
@@ -73,10 +73,56 @@
       </div>
     </section>
     <section id="section-two">
+       <div class="social-icon">
         <img src="images/Facebook Logo.png" alt="fb-logo">
-        <img src="images/Google Logo.png" alt="">
+        <img src="images/Slack Logo.png" alt="slack">
+        <img src="images/Reddit Logo.png" alt="reddit">
+        <img src="images/Twitter Logo.png" alt="twitter">
+        <img src="images/Youtube Logo.png" alt="youtube">
+        <img src="images/Pinterest Logo.png" alt="paint">
+        <img src="images/Dribbble Logo.png" alt="dribble">
+        <img src="images/Google Logo.png" alt="google">
+       </div>
+    </section>
+    <section class="sectiom-three">
+      <div class="banner-2">
+        <div class="col-6">
+          <h3 class="heading-3">Secure your money with Escrow.</h3>
+        <p class="para-2">Spense uses Escrow to secure all payments. We bwlive Escrow 
+          efforts the heighest level of security for your payments,
+        so you never need to worry about scams.</p>
+        <button id="my-btn"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        </div>
+      </div>
+    </section>
+    <section class="section-four">
+      <div class="col-6">
+        <div class="bg-image">
+
+        </div>
+      </div>
+      <div class="col-6">
+        <h3 class="heading-3">A text editor like no other. </h3>
+        <p class="para-2">
+          Our editor pulls you into focus mode with it's simplistic design and 
+          usability so you can put out your best writings.
+        </p>
+        <button id="my-btn-1"><u> Text Editor Live Demo<i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+      </div>
     </section>
   </main>
+  <footer>
+    <div class="col-4">
+      <h3>Spense.</h3>
+      <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
+        and get paid for doing <em> just </em> that.
+      </p>
+    </div>
+    <div class="col-2"></div>
+    <div class="col-2"></div>
+    <div class="col-2"></div>
+    <div class="col-2"></div>
+  </footer>
 </body>
 
 </html>
