--- a/index.html
+++ b/index.html
@@ -95,34 +95,60 @@
         </div>
       </div>
     </section>
-    <section class="section-four">
-      <div class="col-6">
-        <div class="bg-image">
-
+    <section>
+      <div class="section-four">
+        <div class="col-6">
+          <div class="bg-image">
+  
+          </div>
         </div>
-      </div>
-      <div class="col-6">
-        <h3 class="heading-3">A text editor like no other. </h3>
-        <p class="para-2">
-          Our editor pulls you into focus mode with it's simplistic design and 
-          usability so you can put out your best writings.
-        </p>
-        <button id="my-btn-1"><u> Text Editor Live Demo<i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        <div class="col-6">
+          <h3 class="heading-3">A text editor like no other. </h3>
+          <p class="para-2">
+            Our editor pulls you into focus mode with it's simplistic design and 
+            usability so you can put out your best writings.
+          </p>
+          <button id="my-btn-1"><u> Text Editor Live Demo<i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        </div>
       </div>
     </section>
   </main>
-  <footer>
-    <div class="col-4">
-      <h3>Spense.</h3>
+  <footer class="footer">
+    <div id="footer-div" class="col-4">
+      <h2 class="f-header">Spense.</h2>
       <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
         and get paid for doing <em> just </em> that.
       </p>
     </div>
-    <div class="col-2"></div>
-    <div class="col-2"></div>
-    <div class="col-2"></div>
-    <div class="col-2"></div>
-  </footer>
+    <div class="col-2">
+      <h3> Sitemap</h3>
+        <ul>
+          <li><a href="">Homepage</a></li>
+        </ul>
+    </div>
+    <div class="col-2">
+      <h3>Resources</h3>
+      <ul>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </div>
+    <div class="col-2">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+    <div class="col-2">
+      <h3>Oppotunities</h3>
+      <ul>
+        <li> <a href="#">Job</a></li>
+      </ul>
+    </div>
+  </footer>/
 </body>
 
 </html>
