--- a/images/Spense Website.html
+++ b/images/Spense Website.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
+<!-- saved from url=(0032)http://127.0.0.1:5500/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com/">
+<link href="./Spense Website_files/css2" rel="stylesheet">
+  <link rel="stylesheet" href="./Spense Website_files/font-awesome.min.css"><link rel="stylesheet" href="./Spense Website_files/font-awesome.min.css">
+  <link rel="stylesheet" href="./Spense Website_files/style.css">
   <title>Spense Website</title>
 </head>
 
@@ -29,14 +28,14 @@
 <div class="navbar">
   <div class="col-3">
     <div class="first-nav">
-      <a href="#">Spense.</a>
+      <a href="http://127.0.0.1:5500/index.html#">Spense.</a>
     </div>
   </div>
   <div class="col-6">
     <div class="mid-nav">
-      <a href="#">Business</a>
-      <a href="#">Prising</a>
-      <a href="#">Features</a>
+      <a href="http://127.0.0.1:5500/index.html#">Business</a>
+      <a href="http://127.0.0.1:5500/index.html#">Prising</a>
+      <a href="http://127.0.0.1:5500/index.html#">Features</a>
     </div>
   </div>
   <div class="col-3">
@@ -68,20 +67,20 @@
       </div>
       <div class="col-4">
         <div class="banner">
-          <img id="banner" src="images/picture1.png" alt="background">
+          <img id="banner" src="./Spense Website_files/picture1.png" alt="background">
         </div>
       </div>
     </section>
     <section id="section-two">
        <div class="social-icon">
-        <img src="images/Facebook Logo.png" alt="fb-logo">
-        <img src="images/Slack Logo.png" alt="slack">
-        <img src="images/Reddit Logo.png" alt="reddit">
-        <img src="images/Twitter Logo.png" alt="twitter">
-        <img src="images/Youtube Logo.png" alt="youtube">
-        <img src="images/Pinterest Logo.png" alt="paint">
-        <img src="images/Dribbble Logo.png" alt="dribble">
-        <img src="images/Google Logo.png" alt="google">
+        <img src="./Spense Website_files/Facebook Logo.png" alt="fb-logo">
+        <img src="./Spense Website_files/Slack Logo.png" alt="slack">
+        <img src="./Spense Website_files/Reddit Logo.png" alt="reddit">
+        <img src="./Spense Website_files/Twitter Logo.png" alt="twitter">
+        <img src="./Spense Website_files/Youtube Logo.png" alt="youtube">
+        <img src="./Spense Website_files/Pinterest Logo.png" alt="paint">
+        <img src="./Spense Website_files/Dribbble Logo.png" alt="dribble">
+        <img src="./Spense Website_files/Google Logo.png" alt="google">
        </div>
     </section>
     <section class="sectiom-three">
@@ -123,32 +122,69 @@
     <div class="col-2">
       <h3 class="last-head"> Sitemap</h3>
         <ul>
-          <li><a href="">Homepage</a></li>
+          <li><a href="http://127.0.0.1:5500/index.html">Homepage</a></li>
         </ul>
     </div>
     <div class="col-2">
       <h3 class="last-head">Resources</h3>
       <ul>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">Support</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">FAQ</a></li>
       </ul>
     </div>
     <div class="col-2">
       <h3 class="last-head">Company</h3>
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">About</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">Customers</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html#">Blog</a></li>
       </ul>
     </div>
     <div class="col-2">
       <h3 class="last-head">Oppotunities</h3>
       <ul>
-        <li> <a href="#">Job</a></li>
+        <li> <a href="http://127.0.0.1:5500/index.html#">Job</a></li>
       </ul>
     </div>
   </footer>/
-</body>
+<!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
 
-</html>
+</body></html>
