--- a/index.html
+++ b/index.html
@@ -1,154 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- font awasome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- css -->
   <link rel="stylesheet" href="style.css">
-  <title>Spense Website</title>
+  <!-- bulma -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
+  <title>Spense website</title>
 </head>
-
 <body>
-  <!-- header starts here -->
-  <header>
-    <div>
-      <div class="heading">
-        <i class="fa fa-birthday-cake" aria-hidden="true"></i>
-        <span>To celebrate Spense's lunch, we will be waving all fees for the entire month of April. <u>You will be receiving 100% of earning</u>.</span>
-        <i class="fa fa-birthday-cake" aria-hidden="true"></i>
-      </div>
-    </div>
-  </header>
-  <!-- header ends here -->
-
-  <!-- navbar starts here -->
-<div class="navbar">
-  <div class="col-3">
-    <div class="first-nav">
-      <a href="#">Spense.</a>
-    </div>
-  </div>
-  <div class="col-6">
-    <div class="mid-nav">
-      <a href="#">Business</a>
-      <a href="#">Prising</a>
-      <a href="#">Features</a>
-    </div>
-  </div>
-  <div class="col-3">
-    <div class="login">
-      <button id="log">Login</button>
-      <button id="get">Get Started</button>
-    </div>
-  </div>
-</div>
-  <!-- navbar ends here -->
-  <main id="main-section">
-    <section class="section-one">
-      <div id="left-div" class="col-8">
-        <h2 class="heading-2">Share your unfiltered thoughts. Get paid.</h2>
-        <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
-          and get paid for doing <em> just </em> that.
-        </p>
-        <div class="list-items">
-          <ul>
-            <li>Receive 99% off the earning.</li>
-            <li>Get paid vaia Devit Card, ACH or PayPal.</li>
-            <li>Withdraw your earning anytime.</li>
-          </ul>
-        </div>
-        <div class="button">
-          <input id="input-1" type="text" placeholder="jhon@example.com">
-          <input id="input-2" type="button" value="Get Started">
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="banner">
-          <img id="banner" src="images/picture1.png" alt="background">
-        </div>
+  <body>
+    <section class="section has-background-black">
+      <div class="container">
+        <h1 class="subtitle is-5 has-text-white">
+          <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+            To celebrate Spense's lunch, we will be waving all fees for the entire month of April. <u>You will be receiving 100% of earning</u>.
+          <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+        </h1>
       </div>
     </section>
-    <section id="section-two">
-       <div class="social-icon">
-        <img src="images/Facebook Logo.png" alt="fb-logo">
-        <img src="images/Slack Logo.png" alt="slack">
-        <img src="images/Reddit Logo.png" alt="reddit">
-        <img src="images/Twitter Logo.png" alt="twitter">
-        <img src="images/Youtube Logo.png" alt="youtube">
-        <img src="images/Pinterest Logo.png" alt="paint">
-        <img src="images/Dribbble Logo.png" alt="dribble">
-        <img src="images/Google Logo.png" alt="google">
-       </div>
-    </section>
-    <section class="sectiom-three">
-      <div class="banner-2">
-        <div class="col-6">
-          <h3 class="heading-3">Secure your money with Escrow.</h3>
-        <p class="para-2">Spense uses Escrow to secure all payments. We bwlive Escrow 
-          efforts the heighest level of security for your payments,
-        so you never need to worry about scams.</p>
-        <button id="my-btn"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="section-four">
-        <div class="col-6">
-          <div class="bg-image">
-  
+    <!-- navbar starts here -->
+    <nav class="navbar has-background-grey-lighter" role="navigation" aria-label="main navigation" >
+      <!-- <div class="navbar-menu"> -->
+        <div class="column is-4">
+          <div class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item">
+                Spense.
+              </a>
+              <a class="nav-burger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="col-6">
-          <h3 class="bg-heading">A text editor like no other. </h3>
-          <p class="para-2">
-            Our editor pulls you into focus mode with it's simplistic design and 
-            usability so you can put out your best writings.
-          </p>
-          <button id="my-btn-1"><u> Text Editor Live Demo<i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        <div class="column is-8">
+          <div class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item">
+                Business
+              </a>
+              <a class="navbar-item">
+                Pricing
+              </a>
+              <a class="navbar-item">
+                Features
+              </a>
+            </div>
+            <div class="navbar-menu">
+              <div class="navbar-end">
+                <div class="navbar-item">
+                  <div class="buttons">
+                    <a class="button is-light has-background-grey-lighter">
+                      <strong>log in</strong>
+                    </a>
+                    <a class="button is-dark">
+                      Get Started
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
         </div>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div id="footer-div" class="col-4">
-      <h2 class="f-header">Spense.</h2>
-      <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
-        and get paid for doing <em> just </em> that.
-      </p>
-    </div>
-    <div class="col-2">
-      <h3 class="last-head"> Sitemap</h3>
-        <ul>
-          <li><a href="">Homepage</a></li>
-        </ul>
-    </div>
-    <div class="col-2">
-      <h3 class="last-head">Resources</h3>
-      <ul>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">FAQ</a></li>
-      </ul>
-    </div>
-    <div class="col-2">
-      <h3 class="last-head">Company</h3>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </div>
-    <div class="col-2">
-      <h3 class="last-head">Oppotunities</h3>
-      <ul>
-        <li> <a href="#">Job</a></li>
-      </ul>
-    </div>
-  </footer>/
+      <!-- </div> -->
+    </nav>
+    <!-- navbar ends here -->
 </body>
-
 </html>
