--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
               <a class="navbar-item">
                 Spense.
               </a>
-              <a class="nav-burger">
-                <span></span>
-                <span></span>
-                <span></span>
-              </a>
+              
             </div>
           </div>
         </div>
         <div class="column is-8">
           <div class="navbar-menu">
             <div class="navbar-start">
+              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
               <a class="navbar-item">
                 Business
               </a>
@@ -71,5 +72,40 @@
       <!-- </div> -->
     </nav>
     <!-- navbar ends here -->
+
+    <section class="section has-background-grey-lighter">
+      <div class="columns">
+        <div class="column is-8">
+          <h2 class="title is-1 has-text-black">Share your unfiltered thoughts. Get paid.</h2>
+          <p class="has-text-grey content is-medium">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
+            and get paid for doing <em> just </em> that.
+          </p>
+          <ul class="ml-4">
+            <li class="content is-medium" style="list-style: url(images/Checkmark.svg);   list-style-position: inside;" >Receive 99% off the earning.</li>
+            <li class="content is-medium"  style="list-style: url(images/Checkmark.svg);   list-style-position: inside;">Get paid vaia Devit Card, ACH or PayPal.</li>
+            <li class="content is-medium"  style="list-style: url(images/Checkmark.svg);   list-style-position: inside;">Withdraw your earning anytime.</li>
+          </ul>
+
+         <div class="section">
+          <input style="width: 200px; height: 50px;" class="input content is-medium" type="text" placeholder="jhon@example.com">
+          <button class="button has-text-white content is-medium has-background-black" style="width: 200px; height: 50px;">Get Started</button>
+         </div>
+        </div>
+        <div class="column is-4">
+          <img src="images/picture1.png" alt="background">
+        </div>
+      </div>
+    </section>
+    <div class="section">
+      <img src="images/Facebook Logo.png" alt="fb-logo" height="40px" width="125px">
+        <img class="ml-6" src="images/Slack Logo.png" alt="slack" height="40px" width="125px">
+        <img src="images/Reddit Logo.png" alt="reddit" height="40px" width="125px">
+        <img src="images/Twitter Logo.png" alt="twitter" height="40px" width="125px">
+        <img src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
+        <img src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
+        <img src="images/Pinterest Logo.png" alt="paint"height="40px" width="125px">
+        <img src="images/Dribbble Logo.png" alt="dribble"height="40px" width="125px">
+        <img src="images/Google Logo.png" alt="google"height="40px" width="125px">
+    </div>
 </body>
 </html>
