sectiom-four added

--- a/index.html
+++ b/index.html
@@ -98,14 +98,55 @@
     </section>
     <div class="section">
       <img src="images/Facebook Logo.png" alt="fb-logo" height="40px" width="125px">
-        <img class="ml-6" src="images/Slack Logo.png" alt="slack" height="40px" width="125px">
-        <img src="images/Reddit Logo.png" alt="reddit" height="40px" width="125px">
-        <img src="images/Twitter Logo.png" alt="twitter" height="40px" width="125px">
-        <img src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
-        <img src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
-        <img src="images/Pinterest Logo.png" alt="paint"height="40px" width="125px">
-        <img src="images/Dribbble Logo.png" alt="dribble"height="40px" width="125px">
-        <img src="images/Google Logo.png" alt="google"height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Slack Logo.png" alt="slack" height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Reddit Logo.png" alt="reddit" height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Twitter Logo.png" alt="twitter" height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Youtube Logo.png" alt="youtube" height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Pinterest Logo.png" alt="paint"height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Dribbble Logo.png" alt="dribble"height="40px" width="125px">
+        <img style="margin-left: 10px;" src="images/Google Logo.png" alt="google"height="40px" width="125px">
     </div>
+    <section class="section">
+      <div class="bg-img has-background-grey-lighter" style="background-image: url(images/Phone\ .png); height:500px; max-width:100%;  background-position: center;
+      background-repeat: no-repeat; background-size: cover; border-radius: 10px; display: block; margin-left: 60px;">
+        <div class="columns">
+          <div class="column is-6">
+            <div class="section">
+              <h3 class="title is-1 has-text-black">Secure your money with Escrow.</h3>
+        <p class="content is-medium has-text-grey mt-4">Spense uses Escrow to secure all payments. We bwlive Escrow 
+          efforts the heighest level of security for your payments,
+        so you never need to worry about scams.</p>
+        <button class="has-background-grey-lighter button"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+            </div>
+        </div>
+        
+      </div>
+    </section>
+    <section class="section">
+      <div class="columns">
+        <div class="column is-6">
+          <div class="bg-img" style= "background-image: url(images/Editor.png); max-width:100%;
+          background-position: center;
+          background-repeat:no-repeat;
+          background-size:cover;
+          margin-left: 20px;
+          height: 400px;">
+
+          </div>
+        </div>
+        <div class="column is-6">
+          <h3 class="title is-1 has-text-black">A text editor like no other. </h3>
+          <p class="content is-medium has-text-grey">
+            Our editor pulls you into focus mode with it's simplistic design and 
+            usability so you can put out your best writings.
+          </p>
+         <div>
+          <button class="has-background-white button mt-6" style="border:none;"><u> Text Editor Live Demo<i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+         </div>
+        </div>
+        
+      </div>
+    </section>
 </body>
 </html>
