responsive-section fixed

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <img class="ml-3 is-hidden-mobile"  src="images/Google Logo.png" alt="google"height="50px" width="14px">
     
     </div>
-    <section class="section mt-0">
-     <div class="columns">
-       <div class="column is-12">
+    <section class="section mt-0 is-hidden-mobile">
+     <div class="columns is-block-mobile">
+       <div class="column is-12-mobile">
         <div class="bg-img has-background-grey-lighter mt-0 ml-6 pl-6" style="background-image: url(images/Phone\ .png); height:500px; max-width:100%;  background-position: center;
         background-repeat: no-repeat; background-size: cover; border-radius: 10px; display: block; @media only screen and (max-width: 600px){
           .bg-img{
@@ -110,7 +110,7 @@
           }
         }">
           <div class="columns">
-            <div class="column is-6">
+            <div class="column is-6-desktop is-12-mobile">
               <div class="section">
                 <h3 class="title is-1 is-size-1-mobile has-text-black">Secure your money with Escrow.</h3>
           <p class="is-size-4 mt-6 has-text-grey">Spense uses Escrow to secure all payments. We bwlive Escrow 
@@ -125,7 +125,25 @@
        </div>
      </div>
     </section>
-    <section class="section">
+    <section class="section is-hidden-desktop has-background-grey-lighter ml-4 mr-4 box">
+      <div class="columns">
+        <div class="column is-12-mobile">
+          <h3 class="title is-1 is-size-1-mobile has-text-black">Secure your money with Escrow.</h3>
+          <p class="is-size-4 mt-6 has-text-grey">Spense uses Escrow to secure all payments. We bwlive Escrow 
+            efforts the heighest level of security for your payments,
+          so you never need to worry about scams.</p>
+          <button class="has-background-grey-lighter button mt-6 is-size-5"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        </div>
+        <div class="columns">
+          <div class="column is-12-mobile">
+            <figure class="image is-8by12 has-text-centered">
+              <img src="images/Phone .png">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section"> 
       <div class="columns">
         <div class="column is-6">
           <div class="bg-img" style= "background-image: url(images/Editor.png); max-width:100%;
