section-one fixed

--- a/index.html
+++ b/index.html
@@ -78,17 +78,18 @@
         <img src="images/Google Logo.png" alt="google" class="visul">
        </div>
     </section>
-    <section class="sectiom-three">
+    <section class="section-three">
       <div class="banner-2">
           <h3 class="heading-3">Secure your money with Escrow.</h3>
         <p class="para-2">Spense uses Escrow to secure all payments. We bwlive Escrow 
           efforts the heighest level of security for your payments,
         so you never need to worry about scams.</p>
         <button id="my-btn"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
+        <div class="empty">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, delectus.
+        </div>
       </div>
-      <div class="empty">
-        
-      </div>
+      
     </section>
     <section>
       <div class="section-four">
