--- a/index.html
+++ b/index.html
@@ -93,12 +93,8 @@
     </section>
     <section>
       <div class="section-four">
-        <div class="col-6">
-          <div class="bg-image">
-  
-          </div>
-        </div>
-        <div class="col-6">
+          <div class="bg-image"></div>
+        <div class="section-4-div">
           <h3 class="bg-heading">A text editor like no other. </h3>
           <p class="para-2">
             Our editor pulls you into focus mode with it's simplistic design and 
