--- a/index.html
+++ b/index.html
@@ -79,24 +79,23 @@
        </div>
     </section>
     <section class="section-three">
-      <div class="banner-2">
-          <h3 class="heading-3">Secure your money with Escrow.</h3>
+      <div class="lorem">
+        <h3 class="heading-3">Secure your money with Escrow.</h3>
         <p class="para-2">Spense uses Escrow to secure all payments. We bwlive Escrow 
           efforts the heighest level of security for your payments,
         so you never need to worry about scams.</p>
         <button id="my-btn"><u>Learn More About Escrow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </u></button>
-        <div class="empty">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, delectus.
-        </div>
       </div>
-      
+      <div class="ipsum">
+        <img src="images/Phone .png" alt="background" class="img-section">
+      </div>
     </section>
     <section>
       <div class="section-four">
           <div class="bg-image"></div>
         <div class="section-4-div">
-          <h3 class="bg-heading">A text editor like no other. </h3>
-          <p class="para-2">
+          <h3 class="heading-4">A text editor like no other. </h3>
+          <p class="para-3">
             Our editor pulls you into focus mode with it's simplistic design and 
             usability so you can put out your best writings.
           </p>
