section four fixed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     </section>
     <section>
       <div class="section-four">
-          <div class="bg-image"></div>
+          <div>
+            <img src="images/Editor.png" alt="background" class="bg-image">
+          </div>
         <div class="section-4-div">
           <h3 class="heading-4">A text editor like no other. </h3>
           <p class="para-3">
@@ -106,40 +108,39 @@
   </main>
   <footer class="footer">
     <div id="footer-div">
-      <h2 class="f-header">Spense.</h2>
+      <h3 class="f-header">Spense.</h3>
       <p class="para">Spense is an open platform for invidulas to share their unfiltered thoughts. discuss the topics you love,
         and get paid for doing <em> just </em> that.
       </p>
     </div>
-    <div class="div-1">
-      <h3 class="last-head"> Sitemap</h3>
+      <div class="div-1">
+        <h3 class="last-head"> Sitemap</h3>
+          <ul>
+            <li><a href="">Homepage</a></li>
+          </ul>
+      </div>
+      <div class="div-2">
+        <h3 class="last-head">Resources</h3>
         <ul>
-          <li><a href="">Homepage</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">FAQ</a></li>
         </ul>
-    </div>
-    <div class="div-2">
-      <h3 class="last-head">Resources</h3>
-      <ul>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">FAQ</a></li>
-      </ul>
-    </div>
-    <div class="div-3">
-      <h3 class="last-head">Company</h3>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </div>
-    <div class="div-4">
-      <h3 class="last-head">Oppotunities</h3>
-      <ul>
-        <li> <a href="#">Job</a></li>
-      </ul>
-    </div>
+      </div>
+      <div class="div-3">
+        <h3 class="last-head">Company</h3>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Customers</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="div-4">
+        <h3 class="last-head">Oppotunities</h3>
+        <ul>
+          <li> <a href="#">Job</a></li>
+        </ul>
+      </div>
   </footer>/
 </body>
-
 </html>
