--- a/index.html
+++ b/index.html
@@ -114,30 +114,27 @@
       </p>
     </div>
       <div class="div-1">
-        <h3 class="last-head"> Sitemap</h3>
-          <ul>
+          <ul class="unorder-1  ">
+            <li class="last-head"> Sitemap</li>
             <li><a href="">Homepage</a></li>
+
+          </ul>
+          <ul class="unorder-2">
+            <li class="last-head">Resources</li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">FAQ</a></li>
           </ul>
       </div>
       <div class="div-2">
-        <h3 class="last-head">Resources</h3>
-        <ul>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
-      </div>
-      <div class="div-3">
-        <h3 class="last-head">Company</h3>
-        <ul>
+        <ul class="unorder-3">
+          <li class="last-head">Company</li>
           <li><a href="#">About</a></li>
           <li><a href="#">Customers</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
-      </div>
-      <div class="div-4">
-        <h3 class="last-head">Oppotunities</h3>
-        <ul>
+        <ul class="unorder-4">
+          <li class="last-head">Oppotunities</li>
           <li> <a href="#">Job</a></li>
         </ul>
       </div>
